adding role for installing NetworkManager and glusterfs-fuse

--- a/aws/ansible/roles/host-requirements-aws/tasks/NetworkManager.yml
+++ b/aws/ansible/roles/host-requirements-aws/tasks/NetworkManager.yml
@@ -9,3 +9,8 @@
     name: NetworkManager
     state: started
     enabled: yes
+
+- name: Install required packages
+  yum:
+    name: glusterfs-fuse
+    state: present
